# aethersprite

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  config.toml.example  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yml  codeql-analysis.yml  docs.yml
aethersprite/: __init__.py  __main__.py  authz.py  common.py  emotes.py  filters.py  handlers.py  settings.py
aethersprite/extensions/: __init__.py
aethersprite/extensions/base/: __init__.py  _all.py  alias.py  badnames.py  github.py  gmt.py  greet.py  lobotomy.py  name_only.py  nick.py  only.py  poll.py  prefix.py  roles.py  settings.py  wipe.py  yeet.py
aethersprite/filters/: __init__.py  boolean_filter.py  channel_filter.py  role_filter.py  seconds_filter.py  setting_filter.py
aethersprite/webapp/: __init__.py  __main__.py
ncfacbot/: __init__.py  __main__.py  authz.py  common.py  filters.py  lobotomy.py  settings.py
ncfacbot/commands/: __init__.py  closest.py  github.py  gmt.py  gopher.py  lobotomy.py  nick.py  raid.py  settings.py  shop.py  sm.py  tick.py
ncfacbot/extensions/: __init__.py  _all.py  alias.py  closest.py  github.py  gmt.py  greet.py  lobotomy.py  name_only.py  nick.py  only.py  raid.py  safe.py  settings.py  shop.py  sm.py  tick.py
ncfacbot/static/: nc-safe-report.user.js
ncfacbot/webapp/: __init__.py  __main__.py
ncfacbot/webapp/static/: nc-safe-report.user.js
requirements/: dev.in  dev.txt  docs.txt  requirements.in  requirements.txt  web.in  web.txt
